[package]
name = "node-memory-flamegraphs"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Lockyer <hi@daniellockyer.com>"]

[dependencies]
clap = "3.1.6"
ctrlc = "3.2.1"
env_logger = "0.8.4"
futures-util = "0.3.21"
inferno = "0.11.1"
log = "0.4.0"
reqwest = { version="0.11.9", features=["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0", features = ["unbounded_depth"] }
serde_stacker = "0.1.4"
subprocess = "0.2.8"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.17.1"
